# MeinCraft

./: CMakeLists.txt  Camera.h  README.md  main.cpp
Shaders/Block/: frag.glsl
classes/Block/: Block.cpp  Block.h
classes/Chunk/: Chunk.cpp  Chunk.h
cmake_config/: rootdirectory.h.in
include/: Shader.h
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
